--- a/hash.ipynb
+++ b/hash.ipynb
@@ -1,4 +1,5 @@
 class HashTable:
-  def __init__(self, size= 10):
-    self.size = size
-    self.table = [[] for _ in range(size)]
+    def __init__(self, size=10):
+        """Initialize the hash table with a fixed size."""
+        self.size = size
+        self.table = [[] for _ in range(size)]  # Create a list of empty lists for chaining
