--- a/hash.ipynb
+++ b/hash.ipynb
@@ -3,3 +3,7 @@ class HashTable:
         """Initialize the hash table with a fixed size."""
         self.size = size
         self.table = [[] for _ in range(size)]  # Create a list of empty lists for chaining
+
+    def _hash_function(self, key):
+        """Hash function to calculate the index for a given key."""
+        return hash(key) % self.size
